styles.css
body {
    margin: 0;
    background-color: rgb(102 74 25 / 75%);
    font-family: 'Barlow', sans-serif;
}

.sign-up {
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 100px 0 100px;
}

.left-column {
    background-image: url(./house.jpg);
    background-size: cover;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-repeat: no-repeat;
    width: max(30%, 400px);
}

.right-column {
    display: flex;
    flex-direction: column;
    padding: 0 50px;
    min-height: 100vh;
    width: max(35%, 400px);
    background-color: white;
}

.left-header {
    display: flex;
    background-color: rgba(0, 0, 0, .7);
    color: white;
    justify-content: center;
    position: absolute;
    width: 100%;
}

h1 {
    font-weight: normal;
}

.right-header {
    line-height: 50px;
    font-size: 1.5vw;
    padding: 2rem;
}

form {
    padding: 1.5rem;
}

form ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    gap: 25px;
    padding: 2em;
    margin: 0;
    box-shadow: 5px 7px 9px 7px #915a2247;
}

form li {
    display: flex;
    flex-direction: column;
    list-style: none;
    gap: 5px;
}

label {
    font-size: 2vh;
    width: 11vw;
}

input {
    height: 3vh;
    border: 1px solid #915a2299;
    border-radius: .2em;
}

button {
    margin-top: 3rem;
    padding: 0.5rem 2.5rem;
    font-size: 1.5em;
    border: 1px solid #915a22ba;
    border-radius: 0.3em;
    background-color: rgb(102 74 25 / 75%);
    color: white;
    letter-spacing: .1rem;
    box-shadow: 6px 5px 7px #5a2f0452;
}

@media screen and (max-width: 1200px) {

    .sign-up {
        flex-direction: column;

    }

    .left-column {
        background-image: url(./media-house.jpg);
        background-position: center;
        height: 25vh;
        width: 80vw;
    }

    .right-column {
        width: 80vw;
        height: 100vh;
        margin: 0 100px;
        padding: 0 !important;
    }

    .right-header {
        font-size: 2.5vh;
        padding: 0 !important;
        line-height: 1.5;
        margin: 0 3vw;
    }

    form {
        margin: 0 3vw;
    }

    form ul {
        box-shadow: 0px 0px 9px 7px #915a2247;
    }

    label {
        width: auto;
        font-size: 2vh;
    }

    button {
        margin-top: 1.5rem;
        padding: 0.2rem 1.5rem;
        font-size: 1.4em;
        letter-spacing: normal;
    }

}

